login, registro, main y crear rutina. Redireccionamiento basico

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppEjercicios">
         <activity
-            android:name=".CrearRutinaActivity"
+            android:name=".crearRutinaActivity"
             android:exported="false" />
         <activity
             android:name=".principalActivity"
